[package]
name = "chia-client"
version = "0.6.0"
description = "An API wrapper for Chia node daemons"
license = "MIT"
repository = "https://github.com/mpwsh/chia-node-rs"
authors = ["Mike Cronce <mikequadra-tec.net>", "mpw <x@mpw.sh>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = {version = "0.11", default_features = false, features = ["json", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = {version = "3.2", features = ["chrono"]}
thiserror = "1"
tokio = {version = "1", features = ["fs"]}
anyhow = "1.0.72"
bech32 = "0.9.1"
hex = "0.4.3"
log = "0.4.19"
pyo3 = { version = "0.19.2", optional = true, features = ["auto-initialize"] }

[features]
assemble = ["pyo3"]
curry = ["pyo3"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
faster-hex = "0.8.0"
dirs = "5.0"
serde_yaml = "0.9"
regex = "1.9.3"
